# snippetbox

./: .gitignore  MODULE.bazel  README.md  go.mod  go.sum  main.go
cmd/web/: BUILD.bazel  handlers.go  handlers_test.go  helpers.go  main.go  middleware.go  middleware_test.go  routes.go  templates.go  templates_test.go  testutils_test.go
internal/assert/: BUILD.bazel  assert.go
internal/models/: BUILD.bazel  errors.go  snippets.go  user_test.go  users.go
internal/models/mocks/: BUILD.bazel  snippets.go  user.go
internal/scripts/: mysql.sh
internal/validator/: BUILD.bazel  validator.go
tls/: cert.pem  key.pem
ui/: BUILD.bazel
ui/html/: base.tmpl
ui/html/pages/: about.tmpl  account.tmpl  base.tmpl  create.tmpl  login.tmpl  password.tmpl
ui/html/partials/: nav.tmpl
