module(
    name = "snippetbox",
    repo_name = "link_sandx_snippetbox",
)

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_alexedwards_scs_mysqlstore", "com_github_alexedwards_scs_v2", "com_github_go_playground_form_v4", "com_github_go_sql_driver_mysql", "com_github_julienschmidt_httprouter", "com_github_justinas_alice", "com_github_justinas_nosurf", "org_golang_x_crypto")
