load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = [
        "errors.go",
        "snippets.go",
        "users.go",
    ],
    importpath = "snippetbox.sandx.link/internal/models",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_test(
    name = "models_test",
    srcs = [
        "testutils_test.go",
        "user_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":models"],
    deps = ["//internal/assert"],
)
